GNOME Bugzilla – Bug 781899
videorate: In reverse playback mode, don't output the first buffer with ts=segment.stop
Last modified: 2018-03-29 17:49:38 UTC
See commit message
Created attachment 350646 [details] [review] videorate: In reverse playback mode, don't output the first buffer with ts=segment.stop Instead go backwards before segment.stop based on the framerate or the next buffers end timestamp. Otherwise the first buffer will usually be dropped because outside the segment.
Attachment 350646 [details] pushed as bec7f4a - videorate: In reverse playback mode, don't output the first buffer with ts=segment.stop